--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -50,7 +50,7 @@
   <!--*************************************************************-->
   <section>
     <a name="4.1"></a>
-    <h3 class="subTitulo">Concepto</h3>
+    <h3 >Concepto</h3>
     <article>
       <p>
         Consiste en dividir el problema original en diversos subproblemas, que se pueden resolver por separado, para después, recomponer los resultados y obtener la solución al problema.
@@ -64,7 +64,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.2"></a>
-    <h3 class="subTitulo">Ventajas e inconvenientes</h3>
+    <h3 >Ventajas e inconvenientes</h3>
     <article>
       <h4>Ventajas:</h4>
       <ul>
@@ -86,7 +86,7 @@
     <!--*************************************************************-->
   <section>  
     <a name="4.3"></a>
-    <h3 class="subTitulo">Análisis descendente (top down)</h3>
+    <h3 >Análisis descendente (top down)</h3>
     <article>
       <p>
         Es una técnica que permite diseñar la solución de un problema con base en la modularización o segmentación, dándole un enfoque de arriba hacia abajo (top down). Se divide en módulos que se estructuran e integran jerárquicamente.
@@ -107,7 +107,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.4"></a>
-    <h3 class="subTitulo">Modulación de programas. Subprogramas</h3>
+    <h3 >Modulación de programas. Subprogramas</h3>
     <article>
       <p>
         Denominamos módulos como subprogramas, las diferentes partes del problema que puede resolverse de forma independiente. Al ser independientes permiten que podamos centrarnos en una de sus partes. Ofrecen la posibilidad de que se puedan utilizar las soluciones obtenidas en otras partes del programa.
@@ -132,7 +132,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.5"></a>
-    <h3 class="subTitulo">Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
+    <h3 >Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
     <article>
       <h4>Funciones</h4>
       <p>
@@ -215,7 +215,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.6"></a>
-    <h3 class="subTitulo">Ámbito de las llamadas a funciones</h3>
+    <h3 >Ámbito de las llamadas a funciones</h3>
     <article>
       <h4>Variables globales</h4>
       <p>
@@ -248,7 +248,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.7"></a>
-    <h3 class="subTitulo">Prueba, depuración y comentarios de programas</h3>
+    <h3 >Prueba, depuración y comentarios de programas</h3>
     <article>
       <p>
         Una vez terminado el programa es momento de probarlo para comprobar que no tiene fallos y su funcionamiento es correcto. En muchos casos no existen errores, pero el programa no realiza la tarea que debería.
@@ -300,7 +300,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.8"></a>
-    <h3 class="subTitulo">Concepto de librerías</h3>
+    <h3 >Concepto de librerías</h3>
     <article>
       <p>
         Librerías son archivos que nos permiten llevar a cabo diferentes acciones y tareas sin necesidad de que el programador se preocupe de cómo están desarrolladas, solo entender cómo utilizarlas. Nos permiten hacer nuestros programas más modulares y reutilizables, facilitando crear programas con funcionalidades bastante complejas.
@@ -327,7 +327,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.9"></a>
-    <h3 class="subTitulo">Uso de librerías</h3>
+    <h3 >Uso de librerías</h3>
     <article>
       <p>
         Una librería es un conjunto de métodos relacionados con el mismo objetivo para poder ser reutilizado cada vez que el programador lo desee. Ejemplo Math.
@@ -338,7 +338,7 @@
     <!--*************************************************************-->
   <section>
     <a name="4.10"></a>
-    <h3 class="subTitulo">Introducción al concepto de recursividad</h3>
+    <h3 >Introducción al concepto de recursividad</h3>
     <article>
       <p>
         Es la llamada de una función a sí misma hasta que se cumpla una determinada condición de salida.
