--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -46,7 +46,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.0"></a>
-    <h3 class="subTitulo">Introducción</h3>
+    <h3 >Introducción</h3>
     <article>
       <p>Para desarrollar nuestros programas utilizaremos el lenguaje de programación C# es un lenguaje de alto nivel que pertenece al conjunto de lenguajes de .NET. Para ello utilizaremos un IDE, un entorno de desarrollo integrado diseñado para el desarrollo de aplicaciones con un conjunto de herramientas integradas en una interfaz gráfica de usuario (GUI). Sus características son:</p>
     </article> 
@@ -62,14 +62,14 @@
     <!--*************************************************************-->
   <section>  
     <a name="2.1"></a>
-    <h3 class="subTitulo">Bloques de un programa informático</h3>
+    <h3 >Bloques de un programa informático</h3>
     <article>
       <p>Un programa es una secuencia de intrucciones separadas por un punto y coma que se van a ir agrupando en diferentes bloques mediante llaves.</p>
       <p>Cuando creamos un nuevo proyecto, se crea la siguiente estructura.</p>
       <p>Primero nos crea la clase <b>program</b>. Una <b>clase</b> es una estructura de datos que está compuesta por atributos o variables y métodos o funciones.</p>
       <p>El método principal se denomina <b>Main</b>. Será el primero en ejecutarse en nuestro programa. Este tiene una serie de argumentos, que son cadenas de caracteres que podemos pasar línea de comandos.</p>
     </article>
-    <h4 class="apartado">Entrada y salida por pantalla</h4>
+    <h4 >Entrada y salida por pantalla</h4>
     <article>
       <p>Emplearemos la clase <b>Console</b> para establecer la comunicación entre usuario y el programa.</p>
       <p>Para la salida por pantalla, vamos utilizar los métodos de esta clase, <b>Write</b> y <b>Writeline:</b></p>
@@ -90,12 +90,12 @@
     <!--*************************************************************-->
   <section>  
     <a name="2.2"></a>
-    <h3 class="subTitulo">Variables. Usos y Tipos</h3>
+    <h3 >Variables. Usos y Tipos</h3>
     <article>
       <p>Una <b>variable</b> es una estructura de datos que ocupan un espacio en memoria y pueden variar a lo largo de un programa.</p>
       <p>Cuando <b>declaramos una variable</b> establecemos el tipo de dato (entero, cadena, carácter, etc) y su identificador.</p>
     </article>
-    <h4 class="apartado">Tipos de datos en C#:</h4>
+    <h4 >Tipos de datos en C#:</h4>
     <article>
       <ul>
         <li><b>Enteros con signo:</b> Sbyte, short, int, long.</li>
@@ -142,8 +142,8 @@
     <!--*************************************************************-->
   <section>
     <a name="2.3"></a>
-    <h3 class="subTitulo">Constantes y Literales. Tipos y utilidades</h3>
-    <h4 class="apartado">Constantes</h4>
+    <h3 >Constantes y Literales. Tipos y utilidades</h3>
+    <h4 >Constantes</h4>
     <article>  
       <p>Son aquellas cuyo contenido no se puede alterar a lo largo del programa. La palabra reservada es <b>const</b>, y se definen fuera del cuerpo de cualquier función, normalmente al principio del programa.</p>
     </article>
@@ -183,8 +183,8 @@
     <!--*************************************************************-->
   <section>  
     <a name="2.4"></a>
-    <h3 class="subTitulo">Operadores del lenguaje de programación</h3>
-    <h4 class="apartado">Operadores aritméticos</h4>
+    <h3 >Operadores del lenguaje de programación</h3>
+    <h4 >Operadores aritméticos</h4>
     <article>  
       <ul>
         <li>+ Suma aritmética de dos valores.</li>
@@ -207,7 +207,7 @@
         <li>De suma y resta.</li>
       </ol>
     </article>
-    <h4 class="apartado">Operadores booleanos</h4>
+    <h4 >Operadores booleanos</h4>
     <article>
       <ul>
         <li>& AND lógico. Evalúa ambos operandos.</li>
@@ -258,7 +258,7 @@
     <article>
       <p><b>El operador !</b> calcula la negación de su operando, si el operando es true, devolverá el valor false y viceversa.</p>
     </article>
-    <h4 class="apartado">Operadores de comparación e igualdad</h4>
+    <h4 >Operadores de comparación e igualdad</h4>
     <article>
       <table>
         <caption>Operadores de comparación</caption>
@@ -303,7 +303,7 @@
     <!--*************************************************************-->
   <section>  
     <a name="2.5"></a>
-    <h3 class="subTitulo">Conversiones de tipos de clase</h3>
+    <h3 >Conversiones de tipos de clase</h3>
     <article>
       <p>Cuando declaramos una variable, no se puede volver a declarar, ni asignar un valor de otro tipo. En ocasiones, podemos convertir el valor de una variable de un tipo a otro. Podemos tener diferentes clases de conversiones:</p>
       <ul>
@@ -311,12 +311,12 @@
         <li><b>Conversiones explícitas: cuando no hay posibilidad de realizar una conversión implícita debemos indicar al compilador que se pretende realizar una conversión que pueda producir una pérdida de datos.</b></li>
       </ul>
     </article>
-    <h4 class="apartado">Parse y TryParse</h4>
+    <h4 >Parse y TryParse</h4>
     <article>
       <p>Con estos métodos podemos convertir una cadena en varios tipos numéricos: int, decimal, double...</p>
       <p>El método Parse devuelve el número convertido. TryParse devuelve un valor booleano indicado si la conversión se realizó correctamente o no, y devuelve el número convertido.</p>
     </article>
-    <h4 class="apartado">Convert</h4>
+    <h4 >Convert</h4>
     <article>
     <p>Es una clase que convierte un tipo de datos en otro. Algunos métodos son:</p>
       <table>
@@ -364,7 +364,7 @@
     <!--*************************************************************-->
   <section>
     <a name="2.6"></a>
-    <h3 class="subTitulo">Comentario al código</h3>
+    <h3 >Comentario al código</h3>
     <article>
       <p>No debemos pasar por alto que, además de realizar programas, lo debemos hacer de la forma más optimizada y ordenada posible. Los <b>comentarios</b> son una herramienta disponible en el compilador para que se puedan hacer anotaciones en el código sin que sea procesado por el compilador. Está permitido hacer dos tipos de comentarios:</p>
       <ul>
