--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -52,7 +52,7 @@
   <!--*************************************************************-->
   <section>
     <a name="3.0"></a>
-    <h3 class="subTitulo">Introducción</h3>
+    <h3 >Introducción</h3>
     <article>
       <p>
         La programación estructurada es un procedimiento que consiste en diseñar e inplementar programas de forma clara y sencilla para que puedan se mantenidos con facilidad.
@@ -64,7 +64,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.1"></a>
-      <h3 class="subTitulo">Fundamentos de programación</h3>
+      <h3 >Fundamentos de programación</h3>
       <article>
         <p>
           Los fundamentos de la programación son un conjunto de técnicas que persiguen desarrollar algoritmos que sean sencillos de escribir, leer, modificar y testear.
@@ -87,7 +87,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.2"></a>
-      <h3 class="subTitulo">Introducción a la algoritmia y herramientas de diseño</h3>
+      <h3 >Introducción a la algoritmia y herramientas de diseño</h3>
       <article>
         <p>
           Un algoritmo es una secuencia de los pasos de las distintas operaciones que debe realizar el programa para conseguir resolver un problema planteado.
@@ -104,7 +104,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.3"></a>
-      <h3 class="subTitulo">Ciclo de vida de un proyecto software</h3>
+      <h3 >Ciclo de vida de un proyecto software</h3>
       <article>
         <p>Ciclo de vida de un programa informático:</p>
         <ul>
@@ -163,7 +163,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.4"></a>
-      <h3 class="subTitulo">Prueba de programas</h3>
+      <h3 >Prueba de programas</h3>
       <article>
         <p>
           Una vez implementado y compilado el código debemos comenzar la estapa de testing.
@@ -192,7 +192,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.5"></a>
-      <h3 class="subTitulo">Tipos de datos: simples y compuestos</h3>
+      <h3 >Tipos de datos: simples y compuestos</h3>
       <article>
         <h4>Tipos simples</h4>
         <p>
@@ -247,7 +247,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.6"></a>
-      <h3 class="subTitulo">Estructuras de selección (Condicionales)</h3>
+      <h3 >Estructuras de selección (Condicionales)</h3>
       <article>
         <p>
           Las estructuras de selección son aquellas que permiten ejecutar una parte del código dependiendo de si cumple o no una condición.
@@ -355,7 +355,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.7"></a>
-      <h3 class="subTitulo">Estructuras de repetición</h3>
+      <h3 >Estructuras de repetición</h3>
       <article>
         <p>
           Las estructuras de repetición siempre se ejecutan mediante el uso de bucles. Estos permiten que una o varias líneas se ejecuten de forma repetida. Y se repiten mientras que se cumpla la condición de salida.
@@ -393,7 +393,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.8"></a>
-      <h3 class="subTitulo">Estructuras de salto</h3>
+      <h3 >Estructuras de salto</h3>
       <article>
         <p>
           Son aquellas que detienen la ejecución de alguna de las sentencias de control de nuestro programa.
@@ -417,7 +417,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.9"></a>
-      <h3 class="subTitulo">Tratamiento de cadenas</h3>
+      <h3 >Tratamiento de cadenas</h3>
       <article>
         <p>
           Una cadena es un objeto de tipo string. Se utiliza la palabra reservada string. Siempre que queramos escribir combinaciones alfanuméricas, irán entre comillas dobles, ya que el compilador las tomará como un tipo string.
@@ -495,7 +495,7 @@
     <!--*************************************************************-->
     <section>  
       <a name="3.10"></a>
-      <h3 class="subTitulo">Depuración de errores</h3>
+      <h3 >Depuración de errores</h3>
       <article>
         <p>
           Llegados a esta etapa, nuestro objetivo será descubrir todos los errores que existan e intentar solucionarlos de la mejor forma posible. <br>
@@ -520,7 +520,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.11"></a>
-      <h3 class="subTitulo">Documentación de programas</h3>
+      <h3 >Documentación de programas</h3>
       <article>
         <p>
           Debemos elaborar una memoria para que quede registrado todo el desarrollo que hemos llevado a cabo, los fallos que ha presentado y cómo hemos conseguido solventarlos. <br>
@@ -536,7 +536,7 @@
     <!--*************************************************************-->
     <section>
       <a name="3.12"></a>
-      <h3 class="subTitulo">Entornos de desarrollo de programas</h3>
+      <h3 >Entornos de desarrollo de programas</h3>
       <article>
         <p>
           Podemos denominar entorno de desarrollo integrado (IDE), al entorno de programación que hemos utilizado para su realización: editor de código, compilador, depurador e interfaz gráfica. <br>
