--- a/daw/sistemas/sistemInfor.html
+++ b/daw/sistemas/sistemInfor.html
@@ -58,7 +58,7 @@
   <!--*************************************************************-->
   <section>
     <article>
-      <h3 class="subTitulo">Introducción</h3>
+      <h3 >Introducción</h3>
         <ul>
           <li><b>Sistema Informático:</b> Es aquel que almacena y procesa información interrelacionando el hardware y software de un ordenador. </li>
           <li><b>Software Libre:</b> Implica que los usuarios podrán modificar, copiar, ejecutar e incluso mejorar dicho programa.</li>
@@ -77,7 +77,7 @@
   <!--*************************************************************-->
   <section>
     <a name="1.1"></a>
-    <h3 class="subTitulo">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
+    <h3 >Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
     <article>
     <article>
       <p>El sistema informático se compone de una parte central (ordenador) y unos dispositivos que facilitan la entrada/salida de informácion (periféricos). Un ordenador está formado por dos tipos de elementos:</p>
@@ -88,7 +88,7 @@
         <li>Hardware: Componentes físicos y electrónicos.</li>
       </ul>
     </article>
-    <h4 class="apartado">Hardware</h4>
+    <h4 >Hardware</h4>
     <article>
       <p>Podemos encontrar diferentes tipos, dependiendo del rendimiento; comentaremos los fundamentales:</p>
     </article>
@@ -109,7 +109,7 @@
     <article>
       <p>En windows, el administrador de dispositivos nos muestra una lista de todos los componentes conectados a nuestro ordenador. Podemos actualizar o instalar drivers para configurar determinados periféricos.</p>
     </article>
-      <h4 class="apartado">Software</h4>
+      <h4 >Software</h4>
     <article>
       <ul>
         <li>Sistema Operativo</li>
@@ -140,11 +140,11 @@
   <!--*************************************************************-->
   <section>
     <a name="1.2"></a>
-    <h3 class="subTitulo">Tipos y topologias de red</h3>
+    <h3 >Tipos y topologias de red</h3>
     <article>
       <p>Una red de ordenadores es un conjunto de equipos interconectados entre sí que permiten compartir recursos e información. Es necesario que dispongan de tarjeta de red, cables de conexión, dispositivos perifericos y un software adecuado.</p>
     </article>
-      <h4 class="apartado">Tipos de red según su extensión</h4>
+      <h4 >Tipos de red según su extensión</h4>
     <article>
         <ol>
           <li>PAN(Red de área personal): Cuando los equipos están situados a pocos metros y se utilizan solo para uso personal. Aparecieron para que el usuario no tuviera un solo equipo (ordenador) sino también tabletas, moviles y televisores. Para sacar provecho a estos dispositivos y las prestaciones que ofrecen es conveniente realizar una red entre todos.</li>
@@ -158,7 +158,7 @@
     <article>
       <p>Toda red presenta una toplogía diferente, un diseño específico en los planos físicos y lógicos. Es en esencia un conjunto de equipos(nodos) interconectados, la manera en la que se establezcan las conexiones definirá su topología.</p>
     </article>
-    <h4 class="apartado">Topologías Básicas</h4>
+    <h4 >Topologías Básicas</h4>
     <article>
         <ol>
           <li>Punto a punto: Un canal para comunicar solamente dos nodos.</li>
@@ -187,7 +187,7 @@
           <li>Física: Transmite las señales.</li>
         </ol>
     </article>
-    <h4 class="apartado">Conectores de red</h4>
+    <h4 >Conectores de red</h4>
     <article>
       <ol>
         <li>BNC: Emplea cable coaxial y es más compleja de configurar. Actualmente se encuentra en desuso.</li>
@@ -200,15 +200,15 @@
   <!--*************************************************************-->
   <section>
     <a name="1.3"></a>
-    <h3 class="subTitulo">Mapa físico y lógico de una red</h3>
+    <h3 >Mapa físico y lógico de una red</h3>
     <article>
       <p>A la hora de crear o modificar una red es muy importante documentar su estructura. Deberá llevarse a cabo en dos frentes.</p>
     </article>
-    <h4 class="apartado">Mapa físico</h4>
+    <h4 >Mapa físico</h4>
     <article>
       <p>Es una representación gráfica de una red en el mundo real. Todo deberá tenerse en cuenta para garantizar que la señal llegue a cada equipo de la mejor forma posible. Se realizan por aplicaciones que nos ofrecen subir los mapas como archivos en formatos para mostrar la representación y poder interacturar con los diferentes componentes o cosultar información de esta.</p>
     </article>
-    <h4 class="apartado">Mapa lógico</h4>
+    <h4 >Mapa lógico</h4>
     <article>
       <p>Documentación que hace referencia a los aspectos internos de la red. Es necesario saber que dirección ip tiene asignada cada ordenador, a que subred pertenece etc... Es una representación más técnica, que facilita el mantenimiento de la red, y la incorporación de nuevos nodos. Hay aplicaciones que nos ayudan a obtener la información necesaria de lso equipos, pero cuando se comprueba de forma masiva en redes muy grandes, se suele utilizar la consola de comandos.</p>
     </article>
@@ -217,7 +217,7 @@
   <!--*************************************************************-->
   <section>
     <a name="1.4"></a>
-    <h3 class="subTitulo">Arquitectura de un Sistema Operativo</h3>
+    <h3 >Arquitectura de un Sistema Operativo</h3>
     <article>
       <p>Los sitemas operativos han evoluciodo de forma notable, las consolas tipo texto han dejado paso a interfaces de tipo gráfico como windows o mac os x.</p>
       <p>Podemos distinguir en la arquitectura los siguientes elementos clave: <br></p>
@@ -235,7 +235,7 @@
   <!--*************************************************************-->
   <section>
     <a name="1.5"></a>
-    <h3 class="subTitulo">Funciones del Sistema Operativo</h3>
+    <h3 >Funciones del Sistema Operativo</h3>
     <article>
       <ul>
         <li>Administración de procesos: Decide el orden de procesamientos de los programas que están a la espera, así como asignar los recursos necesarios para su proceso.</li>
@@ -258,39 +258,39 @@
   <!--*************************************************************-->
   <section>
   <a name="1.6"></a>
-  <h3 class="subTitulo">Tipos de sistemas operativos</h3>
+  <h3 >Tipos de sistemas operativos</h3>
     <article>
       <p>Entendemos por sistema operativo el software encargado de poner en marcha un ordenador, garantizando su correcto funcionamiento. Es el intermediario entre usuario y hardware. Los podemos clasificar: <br></p>
     </article>
-    <h4 class="apartado">Según la cantidad de procesos que pueden gestionar de forma simultánea</h4>
+    <h4 >Según la cantidad de procesos que pueden gestionar de forma simultánea</h4>
     <article>
         <ul>
           <li>Monotarea: Un proceso en ejecución realiza tareas simultaneamente.</li>
           <li>Multitarea: Ejecuta varios procesos a la vez, en dos procesos pueden utilizar dos CPU diferentes.</li>
         </ul>
     </article>
-    <h4 class="apartado">Según el número de usuarios</h4>
+    <h4 >Según el número de usuarios</h4>
     <article>
       <ul>
         <li>Monousuario: Único usuario trabaja con un solo ordenador.</li>
         <li>Multiusuario: Varios usuarios pueden trabajar simultánemente.</li>
       </ul>
     </article>
-    <h4 class="apartado">Según el número de procesadores</h4>
+    <h4 >Según el número de procesadores</h4>
     <article>
       <ul>
         <li>Monoproceso: Solo un proceso a la vez. Realiza tareas rotatorias con intercambio muy rápido.</li>
         <li>Multiproceso: Diferentes tareas al mismo tiempo, ofrece varios procesos de forma simultánea.</li>
       </ul>
     </article>
-    <h4 class="apartado">Según los servicios que ofrece</h4>
+    <h4 >Según los servicios que ofrece</h4>
     <article>
       <ul>
         <li>Centralizados: Todos los recursos se encuentran en una misma máquina.</li>
         <li>Distribuidos: Los recursos pueden estar en diferentes máquinas conectadas en red.</li>
       </ul>
     </article>
-    <h4 class="apartado">Según el tipo de licencia</h4>
+    <h4 >Según el tipo de licencia</h4>
     <article>
       <ul>
         <li>Propietarios: Limitaciones de uso. Propiedad de alguna empresa.</li>
@@ -302,7 +302,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.7"></a>
-  <h3 class="subTitulo">Tipos de aplicaciones</h3>
+  <h3 >Tipos de aplicaciones</h3>
     <article>
       <ul>
         <li>Aplicaciones locales: Se almacenan en la unidad de disco local y solamente este tiene acceso a ellas.</li>
@@ -315,8 +315,8 @@
   <!--*************************************************************-->
   <section>
   <a name="1.8"></a>
-  <h3 class="subTitulo">Licencias y tipos</h3>
-  <h4 class="apartado">Licencias</h4>
+  <h3 >Licencias y tipos</h3>
+  <h4 >Licencias</h4>
     <article>
       <ul>
         <li>Gratuitas: Permite la redistribución, no permiten modificar su código fuente.</li>
@@ -325,7 +325,7 @@
         <li>Propietarios: Aquel cuyas copias, redistribuciones o modificaciones, están prohibidas por el propietario. Es necesario solicitar permiso a su propietario o pagar por ello.</li>
       </ul>
     </article>
-    <h4 class="apartado">El software comercial puede ser:</h4>
+    <h4 >El software comercial puede ser:</h4>
     <article>
       <ul>
         <li>OEM: Forma parte de un equipo nuevo. Una vez activamos el hardware queda unido a esta licencia. Los fabricantes ponen limitaciones a su reinstalación. Está prohibida su venta y cesión a terceros, salvo si está especificado.</li>
@@ -338,7 +338,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.9"></a>
-  <h3 class="subTitulo">Gestores de arranque</h3>
+  <h3 >Gestores de arranque</h3>
     <article>
       <p>Los gestores de arranque son un pequeño programa que se ejecuta una vez iniciada la bios. Prepara los elementos más básicos para que el S.O. funcione.</p>
     </article>
@@ -347,7 +347,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.10"></a>
-  <h3 class="subTitulo">Maquinas virtuales</h3>
+  <h3 >Maquinas virtuales</h3>
     <article>
       <p>Son un software que nos permite instalar S.O. de forma que crea que está instalado en un equipo. Hay dos tipos diferentes, las de sistemas y las de proceso. Emulan un ordenador por completo y ejecutan un S.O. en su interior. <br>Utilizan el hardware instalado en el equipo base, todo funcionará como si de un pc normal se tratase.</p>
       <p>Las de proceso no emulan todo el equipo completo sino que ejecutan un proceso concreto como una aplicación. Son muy útiles para crear aplicaciones para varias plataformas, creando un entorno de ejecución para lidiar con el S.O. y no programar específicamente para un sistema.</p>
@@ -357,7 +357,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.11"></a>
-  <h3 class="subTitulo">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
+  <h3 >Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
   <article>
       <ul>
         <li>Requisitos del hardware: La documentación de los S.O. ofrece características mínimas requeridas.</li>
@@ -370,8 +370,8 @@
   <!--*************************************************************-->
   <section>
   <a name="1.12"></a>
-  <h3 class="subTitulo">Instalación de sistemas o requisitos, versiones y licencias</h3>
-  <h4 class="apartado">Los requisitos principales son:</h4>  
+  <h3 >Instalación de sistemas o requisitos, versiones y licencias</h3>
+  <h4 >Los requisitos principales son:</h4>  
   <article>    
       <ul>
         <li>Tipo y velocidad de la CPU</li>
@@ -385,7 +385,7 @@
       <p>En la documentación también suelen especificarse unos requerimientos recomendados, es ideal que los cumplamos para obtener un rendimiento óptimo. Sistemas como windows ofrecen distintas modalidades (starter, home, ultimate, pro, etc..) <br>Si es de régimen propietario debemos adquirir una licencia.</p>
       <p>Las particiones son divisiones lógicas en el disco físico. El S.O. trata cada partición como si fuera un disco independiente, de modo que podamos tener diferentes S.O. en particiones distintas.</p>
     </article>
-    <h4 class="apartado">Tipos de particiones</h4>
+    <h4 >Tipos de particiones</h4>
     <article>
       <ul>
         <li>Primarias: Pueden ser reconocidas como particiones de arranque. Un disco cuenta con una única partición primaria que abarca todo el espacio disponible, está limitado a cuatro.</li>
@@ -397,7 +397,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.13"></a>
-  <h3 class="subTitulo">Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>  
+  <h3 >Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>  
   <article>
       <p>Antes de instalarlas debemos estar seguros de que cumplimos lo especificado en la documentación.</p>
   </article>
@@ -418,7 +418,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.14"></a>
-  <h3 class="subTitulo">Actualización de sistemas operativos y aplicaciones</h3>  
+  <h3 >Actualización de sistemas operativos y aplicaciones</h3>  
   <article>
       <ul>
         <li>Actualización: Instalar la nueva versión sin desinstalar la previa.</li>
@@ -433,7 +433,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.15"></a>
-  <h3 class="subTitulo">Archivos de inicio de S.O.</h3>  
+  <h3 >Archivos de inicio de S.O.</h3>  
   <article>
       <p>Los pasos para iniciar un ordenador varian dependiendo a diversos factores, dispositivos de arranque, existencia de particiones, etc...</p>
   </article>
@@ -451,7 +451,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.16"></a>
-  <h3 class="subTitulo">Registros del sistema</h3>  
+  <h3 >Registros del sistema</h3>  
   <article>
       <p>En determinados S.O. nos brinda un registro que centraliza la configuración, sus servicios y aplicaciones. El visor de eventos complementan la información del registro. Es preciso realizar mantenimiento y limpieza regular.</p>
     </article>
@@ -460,7 +460,7 @@
   <!--*************************************************************-->
   <section>
   <a name="1.17"></a>
-  <h3 class="subTitulo">Actualización y mantenimiento de controladores de dispositivos</h3>
+  <h3 >Actualización y mantenimiento de controladores de dispositivos</h3>
     <article>
       <p>Drivers o controladores permiten que el S.O. pueden trabajar con ellos, conforme vayan apareciendo nuevas versiones de ellos para optimizar el rendimiento y minimizar problemas en el futuro.</p>
     </article>
