--- a/daw/sistemas/temaDos.html
+++ b/daw/sistemas/temaDos.html
@@ -48,7 +48,7 @@
   </section>
   <!--*************************************************************-->
   <section>
-    <h3 class="subTitulo">Introducción</h3>
+    <h3 >Introducción</h3>
     <article>
       <p>El <b>software base</b> es el programa encargado de controlar el ordenador.</p>
     </article>
@@ -56,13 +56,13 @@
   <!--*************************************************************-->
   <section>
     <a name="2.1"></a>
-    <h3 class="subTitulo">Administración de usuarios y grupos locales</h3>
+    <h3 >Administración de usuarios y grupos locales</h3>
     <article>
       <p>Mediante las cuentas de usuario se identifica y autentifica un individuo con el sistema. En un mismo equipo pueden trabajar varias personas, con su propio espacio de trabajo.</p>
       <p>El usuario administrador es el encargado de dar acceso a los usuarios y controlar todas las operaciones, este usuario no tiene límites cuando trabaja sobre el sistema.</p>
       <p>Los S.O. multiusuario ofrecen la posibilidad de registrarse al iniciar sesión, con estos datos se puede controlar el acceso y permite asignar permisos y restricciones.</p>
     </article>
-    <h4 class="apartado">Diferentes permisos</h4>
+    <h4 >Diferentes permisos</h4>
     <article>
       <ul>
         <li><b>Lectura(read):</b> El usuario tiene la posibilidad de abrir y leer los contenidos del fichero.</li>
@@ -73,7 +73,7 @@
     <article>
       <p>La gestión de usuarios la lleva a cabo el administrador o root, que es el que dispone de todos los permisos, sin limitación.</p>
     </article>
-    <h4 class="apartado">Permisos en linux</h4>
+    <h4 >Permisos en linux</h4>
     <article>
       <p>
         <b>-rw-r--r--</b> Estos nueve caracteres se dividen en tres grupos en tres caracteres.
@@ -129,7 +129,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.2"></a>
-    <h3 class="subTitulo">Seguridad de cuentas de usuario</h3>
+    <h3 >Seguridad de cuentas de usuario</h3>
     <article>
       <p>Si únicamente nosotros tenemos acceso a un equipo es habitual que lo hagmos como administrador, teneiendo todos los permisos. Es importante que iniciemos sesión con dicha cuenta o con otras que nos birnden permisos avanzados si las operaciones lo requieren. Para maximizar la seguridad debemos tener en cuenta las siguientes pautas:</p>
     </article>
@@ -149,7 +149,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.3"></a>
-    <h3 class="subTitulo">Seguridad de contraseñas</h3>
+    <h3 >Seguridad de contraseñas</h3>
     <article>  
       <p>Las contraseñas son clave para proteger las cuentas de usuario y la información que se almacena en el equipo, cuanto más segura sea una contraseña, mayor protección nos ofrecerá.</p>
       <p>Los S.O. ofrecen al administrador la posibilidad de establecer cuáles serán las características de las contraseñas.</p>
@@ -165,7 +165,7 @@
     <article>
       <p>La cuenta de usuario invitado tiene los mismos privilegios que un usuario estándar, pero es anónima y sin contraseña. Viene deshabilitada por defecto y por seguridad convien no habilitarla.</p>
     </article>
-    <h4 class="apartado">Administración de perfiles locales de usuario</h4>
+    <h4 >Administración de perfiles locales de usuario</h4>
     <article>
       <p>En los S.O. multiusuario podemos definir diferentes perfiles, cada uno contendrá la información relativa a la configuración de esos usuarios específicos.</p>
     </article>
@@ -184,7 +184,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.4"></a>
-    <h3 class="subTitulo">Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</h3>
+    <h3 >Configuración del protocolo TCP/IP. Direcciones IP y máscaras de subred</h3>
     <article>
       <p>La <b>dirección IP</b> constituye el concepto fundamental en para configurar debidamente el servidor de redes. Con ella podemos identificar a cada equipo y consta siempre de cuatro números enteros de 4 bytes separados por puntos que pueden oscilar entre 0 y 255.</p>
       <p>Su formato sera W.X.Y.Z (192.168.1.21), dentro du una misma red no pueden existir dos direcciones IP iguales.</p>
@@ -251,7 +251,7 @@
   <!--*************************************************************-->
   <section>
     <a name="2.5"></a>
-    <h3 class="subTitulo">Servicio de Nombres de Dominios (DNS)</h3>
+    <h3 >Servicio de Nombres de Dominios (DNS)</h3>
     <article>
       <p>Los servidores DNS son muy importantes, estos tienen la misión de evitar recordar la IP del equipo al que nos conectamos. Es el servidor DNS el que relaciona el nombre escrito (www.google.es) con la ip (142.250.200.68) que tiene alojada la página que queremos visualizar.</p>
       <p>Para comprobar el estado de los servidores DNS en un equipo se realiza habitualmente por consola de comandos y a que es la forma más sencilla y rápida.</p>
@@ -264,7 +264,7 @@
   <!--*************************************************************-->
   <section>
   <a name="2.6"></a>
-    <h3 class="subTitulo">Archivos de configuración de red</h3>  
+    <h3 >Archivos de configuración de red</h3>  
     <article>  
       <p>Toda la comunicación en red sigue el modelo TCP/IP. Como protocolo, rige las normas al realizar este proceso de comunicación.</p>
       <p>La configuración de nuestro equipo se realiza a través del Panel de control:</p>
@@ -284,7 +284,7 @@
   <!--*************************************************************-->
   <section>
   <a name="2.7"></a>
-    <h3 class="subTitulo">Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</h3>  
+    <h3 >Optimización de sistemas para ordenadores portátiles. Archivos de red sin conexión</h3>  
     <h4>Los pórtatiles poseen unas características propias que debemos tener en cuenta:</h4>
     <article>
       <ul>
@@ -317,7 +317,7 @@
   <!--*************************************************************-->
   <section>
   <a name="2.8"></a>
-    <h3 class="subTitulo">Principales comandos de sistemas operativos libres y propietarios</h3>  
+    <h3 >Principales comandos de sistemas operativos libres y propietarios</h3>  
     <article>
       <p>Existen una serie de comandos que nos ofrecen la posibilidad de movernos y gestionar los S.O. Es conveniente conocer los más utilizados:</p>
     </article>
