--- a/daw/sistemas/temaCinco.html
+++ b/daw/sistemas/temaCinco.html
@@ -48,48 +48,48 @@
   <!--*************************************************************-->
     <section>
       <article>
-        <h3 class="subTitulo">Introducción</h3>
+        <h3 >Introducción</h3>
       </article>
   <!--*************************************************************-->
   <a name="5.1"></a>
     <article>
-      <h3 class="subTitulo">Equipos de dominio</h3>
+      <h3 >Equipos de dominio</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.2"></a>
     <article>
-      <h3 class="subTitulo">Permisos y derechos</h3>
+      <h3 >Permisos y derechos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.3"></a>
     <article>
-      <h3 class="subTitulo">Administración del acceso a recursos. Samba. NFS</h3>
+      <h3 >Administración del acceso a recursos. Samba. NFS</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.4"></a>
     <article>
-      <h3 class="subTitulo">Permisos de red. Permisos locales. Herencia. Permisos efectivos</h3>
+      <h3 >Permisos de red. Permisos locales. Herencia. Permisos efectivos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.5"></a>
     <article>
-      <h3 class="subTitulo">Delegación de permisos</h3>
+      <h3 >Delegación de permisos</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.6"></a>
     <article>
-      <h3 class="subTitulo">Listas de control de acceso (ACL Access Control List)</h3>
+      <h3 >Listas de control de acceso (ACL Access Control List)</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="5.7"></a>
     <article>
-      <h3 class="subTitulo">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</h3>
+      <h3 >Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
